# kindle-pdf-capture

./: .gitignore  CHANGELOG.md  CONTRIBUTING.ja.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
docs/en/: architecture.md  installation.md  legal.md  permissions.md  troubleshooting.md  usage.md
docs/ja/: architecture.md  installation.md  legal.md  permissions.md  troubleshooting.md  usage.md
src/kindle_pdf_capture/: __init__.py  cropper.py  main.py  normalize.py  ocr.py  orchestrator.py  page_turner.py  pdf_builder.py  region_selector.py  render_wait.py  window_capture.py
tests/: conftest.py  test_cli.py  test_cropper.py  test_normalize.py  test_ocr.py  test_orchestrator.py  test_page_turner.py  test_pdf_builder.py  test_region_selector.py  test_render_wait.py  test_version.py  test_window_capture.py
